--- a/css/main.css
+++ b/css/main.css
@@ -334,9 +334,6 @@ body {
   height: 100vh;
   background-color: #eb94d5;
   overflow: auto;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
 }
 
 .mobile-menu__container {
@@ -359,13 +356,30 @@ body {
 .mobile-menu__close-icon {
   width: 40px;
   height: 40px;
-  fill: #212121;
+  fill: var(--second-color);
 }
 
 .mobile-menu.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+}
+
+.mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--second-color);
+  transition: color var(--duration) var(--timing-function);
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--accent-color);
 }
 
 .header {
