--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -6,9 +6,9 @@
   height: 100vh;
   background-color: rgb(235, 148, 213);
   overflow: auto;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+  // opacity: 0;
+  // visibility: hidden;
+  // pointer-events: none;
 
   &__container {
     position: relative;
@@ -29,11 +29,26 @@
   &__close-icon {
     width: 40px;
     height: 40px;
-    fill: #212121;
+    fill: var(--second-color);
   }
   &.is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
+  }
+  &__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  &__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--second-color);
+    transition: color var(--duration) var(--timing-function);
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
   }
 }
