--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -4,11 +4,10 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgb(235, 148, 213);
   overflow: auto;
-  // opacity: 0;
-  // visibility: hidden;
-  // pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 
   &__container {
     position: relative;
