--- a/css/main.css
+++ b/css/main.css
@@ -326,83 +326,123 @@ body {
   background: #188ce8;
 }
 
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: auto;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    background-color: var(--first-color);
+  }
+  .mobile-menu__container {
+    position: relative;
+    padding-top: 48px;
+    padding-bottom: 48px;
+  }
+  .mobile-menu__close-btn {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    line-height: 0;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin-right: 10px;
+    transition: color var(--duration) var(--timing-function);
+  }
+  .mobile-menu__close-icon {
+    width: 40px;
+    height: 40px;
+    fill: var(--second-color);
+  }
+  .mobile-menu__close-icon:hover, .mobile-menu__close-icon:focus {
+    fill: var(--accent-color);
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .mobile-menu__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--second-color);
+    transition: color var(--duration) var(--timing-function);
+  }
+  .mobile-menu__link:hover, .mobile-menu__link:focus {
+    color: var(--accent-color);
+  }
+  .mobile-menu__contact-list {
+    margin-top: 306px;
+    margin-bottom: 34px;
+  }
+  .mobile-menu__contact-link-tel {
+    display: block;
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--second-color);
+    transition: color var(--duration) var(--timing-function);
+  }
+  .mobile-menu__contact-link-tel:hover, .mobile-menu__contact-link-tel:focus {
+    color: var(--accent-color);
+  }
+  .mobile-menu__contact-link-mail {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+    transition: color var(--duration) var(--timing-function);
+  }
+  .mobile-menu__contact-link-mail:hover, .mobile-menu__contact-link-mail:focus {
+    color: var(--accent-color);
+  }
+  .mobile-menu__social-list {
+    display: flex;
+  }
+  .mobile-menu__social-item {
+    display: flex;
+  }
+  .mobile-menu__social-link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+  }
+  .mobile-menu__social-link::after {
+    content: "";
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
-.mobile-menu__container {
-  position: relative;
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-
-.mobile-menu__close-btn {
-  position: absolute;
-  top: 10px;
-  right: 0;
-  line-height: 0;
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  margin-right: 10px;
-}
-
-.mobile-menu__close-icon {
-  width: 40px;
-  height: 40px;
-  fill: var(--second-color);
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
-.mobile-menu__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu__link {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  color: var(--second-color);
-  transition: color var(--duration) var(--timing-function);
-}
-
-.mobile-menu__link:hover, .mobile-menu__link:focus {
-  color: var(--accent-color);
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
 }
 
 .header {
   border-bottom: 1px solid #ececec;
 }
 
-.header__mobile-menu-btn {
-  line-height: 0;
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  margin-right: 10px;
-}
-
-.header__mobile-menu-icon {
-  width: 40px;
-  height: 40px;
-  fill: #000000;
-}
-
-.header-container {
+.header .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -410,7 +450,7 @@ body {
   margin-bottom: 10px;
 }
 
-.logo-link {
+.header .logo-link {
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 24px;
@@ -419,20 +459,145 @@ body {
   margin-left: 15px;
 }
 
-.logo-web {
+.header .logo-web {
   color: var(--accent-color);
 }
 
-.logo-studio {
+.header .logo-studio {
   color: #000000;
 }
 
-.site-nav {
-  display: none;
+@media screen and (max-width: 767px) {
+  .header .site-nav {
+    display: none;
+  }
+  .header .contact-list {
+    display: none;
+  }
+  .header .header__mobile-menu-btn {
+    line-height: 0;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin-right: 10px;
+    transition: color var(--duration) var(--timing-function);
+  }
+  .header .header__mobile-menu-icon {
+    width: 40px;
+    height: 40px;
+    fill: #000000;
+  }
+  .header .header__mobile-menu-icon:hover, .header .header__mobile-menu-icon:focus {
+    fill: var(--accent-color);
+  }
 }
 
-.contact-list {
-  display: none;
+@media screen and (min-width: 768px) {
+  .logo-link {
+    margin-top: 26px;
+    margin-bottom: 26px;
+    margin-right: 88px;
+  }
+  .header__mobile-menu-btn {
+    display: none;
+  }
+  .header__close-btn {
+    display: none;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .site-nav {
+    display: flex;
+  }
+  .site-nav__link.current::after {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
+  .current {
+    color: var(--accent-color);
+  }
+  .site-nav__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--second-color);
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition: color var(--duration) var(--timing-function);
+  }
+  .site-nav__link:hover, .site-nav__link:focus {
+    color: var(--accent-color);
+  }
+  .site-nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .contact-list {
+    display: block;
+    margin-left: auto;
+    justify-content: center;
+    align-items: center;
+  }
+  .contact-list .link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
+  }
+  .contact-link-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    fill: #757575;
+  }
+  .contact-icon {
+    margin-right: 8px;
+    transition: fill var(--timing-function) var(--duration);
+  }
+  .contact-link:hover .contact-icon,
+  .contact-link:focus .contact-icon {
+    fill: currentColor;
+  }
+  .contact-link:hover,
+  .contact-link:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-link {
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    margin-right: 90px;
+  }
+  .contact-list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .contact-link-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+  }
+  .contact-icon {
+    margin-right: 10px;
+  }
 }
 
 .hero-section {
