--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,53 +1,117 @@
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: auto;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    background-color: var(--first-color);
 
-  &__container {
-    position: relative;
-    padding-top: 48px;
-    padding-bottom: 48px;
-  }
-
-  &__close-btn {
-    position: absolute;
-    top: 10px;
-    right: 0;
-    line-height: 0;
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    margin-right: 10px;
-  }
-  &__close-icon {
-    width: 40px;
-    height: 40px;
-    fill: var(--second-color);
-  }
-  &.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
-  &__item:not(:last-child) {
-    margin-bottom: 32px;
-  }
-  &__link {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.17;
-    letter-spacing: 0.02em;
-    color: var(--second-color);
-    transition: color var(--duration) var(--timing-function);
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
+    &__container {
+      position: relative;
+      padding-top: 48px;
+      padding-bottom: 48px;
     }
+
+    &__close-btn {
+      position: absolute;
+      top: 10px;
+      right: 0;
+      line-height: 0;
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      margin-right: 10px;
+      transition: color var(--duration) var(--timing-function);
+    }
+    &__close-icon {
+      width: 40px;
+      height: 40px;
+      fill: var(--second-color);
+      &:hover,
+      &:focus {
+        fill: var(--accent-color);
+      }
+    }
+    &.is-open {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: auto;
+    }
+    &__item:not(:last-child) {
+      margin-bottom: 32px;
+    }
+    &__link {
+      font-weight: 500;
+      font-size: 40px;
+      line-height: 1.17;
+      letter-spacing: 0.02em;
+      color: var(--second-color);
+      transition: color var(--duration) var(--timing-function);
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+      }
+    }
+    &__contact-list {
+      margin-top: 306px;
+      margin-bottom: 34px;
+    }
+    &__contact-link-tel {
+      display: block;
+      margin-bottom: 32px;
+      font-weight: 500;
+      font-size: 34px;
+      line-height: 1.17;
+      letter-spacing: 0.02em;
+      color: var(--second-color);
+      transition: color var(--duration) var(--timing-function);
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+      }
+    }
+    &__contact-link-mail {
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 1.16;
+      letter-spacing: 0.02em;
+      color: #757575;
+      transition: color var(--duration) var(--timing-function);
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+      }
+    }
+    &__social-list {
+      display: flex;
+    }
+    &__social-item {
+      display: flex;
+    }
+    &__social-link {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 1.22;
+      letter-spacing: 0.02em;
+      color: var(--accent-color);
+      &::after {
+        content: "";
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        transform: rotate(90deg);
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
   }
 }
