--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,138 +1,167 @@
 .header {
   border-bottom: 1px solid #ececec;
 
-  &__mobile-menu-btn {
-    line-height: 0;
-    background-color: transparent;
-    border: none;
-    padding: 0;
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .logo-link {
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    margin-left: 15px;
+  }
+
+  .logo-web {
+    color: var(--accent-color);
+  }
+  .logo-studio {
+    color: #000000;
+  }
+
+  @media screen and (max-width: 767px) {
+    .site-nav {
+      display: none;
+    }
+    .contact-list {
+      display: none;
+    }
+    .header {
+      &__mobile-menu-btn {
+        line-height: 0;
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        margin-right: 10px;
+        transition: color var(--duration) var(--timing-function);
+      }
+      &__mobile-menu-icon {
+        width: 40px;
+        height: 40px;
+        fill: #000000;
+        &:hover,
+        &:focus {
+          fill: var(--accent-color);
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .logo-link {
+    margin-top: 26px;
+    margin-bottom: 26px;
+    margin-right: 88px;
+  }
+  .header {
+    &__mobile-menu-btn {
+      display: none;
+    }
+    &__close-btn {
+      display: none;
+    }
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .site-nav {
+    display: flex;
+  }
+  .site-nav__link.current::after {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
+  .current {
+    color: var(--accent-color);
+  }
+
+  .site-nav__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--second-color);
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition: color var(--duration) var(--timing-function);
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+
+  .site-nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .contact-list {
+    display: block;
+    margin-left: auto;
+    justify-content: center;
+    align-items: center;
+    & .link {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+      color: #757575;
+    }
+  }
+  .contact-link-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    fill: #757575;
+  }
+  .contact-icon {
+    margin-right: 8px;
+    transition: fill var(--timing-function) var(--duration);
+    .contact-link:hover &,
+    .contact-link:focus & {
+      fill: currentColor;
+    }
+  }
+  .contact-link:hover,
+  .contact-link:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-link {
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    margin-right: 90px;
+  }
+  .contact-list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .contact-link-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+  }
+  .contact-icon {
     margin-right: 10px;
   }
-  &__mobile-menu-icon {
-    width: 40px;
-    height: 40px;
-    fill: #000000;
-  }
 }
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.logo-link {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  margin-left: 15px;
-}
-.logo-web {
-  color: var(--accent-color);
-}
-.logo-studio {
-  color: #000000;
-}
-
-.site-nav {
-  display: none;
-}
-
-.contact-list {
-  display: none;
-}
-// .header-container {
-//   display: flex;
-//   align-items: center;
-// }
-// .navigation {
-//   display: flex;
-//   align-items: center;
-// }
-// .logo-link {
-//   font-family: Raleway, sans-serif;
-//   font-weight: 700;
-//   font-size: 26px;
-//   line-height: 1.19;
-//   letter-spacing: 0.03em;
-//   margin-right: 90px;
-// }
-
-// .logo-web {
-//   color: var(--accent-color);
-// }
-// .logo-studio {
-//   color: #000000;
-// }
-// .site-nav {
-//   display: flex;
-// }
-// .site-nav__link.current::after {
-//   content: "";
-//   position: absolute;
-//   display: block;
-//   left: 0;
-//   bottom: 0;
-//   width: 100%;
-//   height: 4px;
-//   border-radius: 2px;
-//   background-color: var(--accent-color);
-// }
-// .current {
-//   color: var(--accent-color);
-// }
-
-// .site-nav__link {
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--second-color);
-//   position: relative;
-//   display: block;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   transition: color var(--duration) var(--timing-function);
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
-
-// .site-nav__item:not(:last-child) {
-//   margin-right: 50px;
-// }
-// .contact-list {
-//   display: flex;
-//   justify-content: space-between;
-//   margin-left: auto;
-//   & .link {
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     color: #757575;
-//   }
-// }
-// .contact-link-item {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   fill: #757575;
-//   margin-left: 50px;
-// }
-// .contact-icon {
-//   margin-right: 10px;
-//   transition: fill var(--timing-function) var(--duration);
-//   .contact-link:hover &,
-//   .contact-link:focus & {
-//     fill: currentColor;
-//   }
-// }
-
-// .contact-link:hover,
-// .contact-link:focus {
-//   color: var(--accent-color);
-// }
