--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -13,13 +13,21 @@
   max-width: 1600px;
   margin: 0 auto;
 }
-.hero-title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--first-color);
-  margin-bottom: 30px;
-}
+
+// .hero-title {
+//   font-weight: 900;
+//   font-size: 26px;
+//   line-height: 1.61;
+//   text-align: center;
+//   letter-spacing: 0.06em;
+//   text-transform: uppercase;
+//   color: var(--first-color);
+//   margin-bottom: 30px;
+// }
+
+// @media screen and (min-width: 1200px) {
+//   .hero-title {
+//     font-size: 44px;
+//     line-height: 1.36;
+//   }
+// }
