--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,32 +2,46 @@
   background: #c4c4c4;
   display: flex;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/bg-hero/bg-hero-pc.jpg");
+    url("../images/bg-hero/bg-hero-mob.jpg");
   background-size: cover;
-  max-width: 1600px;
+  max-width: 480px;
   margin: 0 auto;
 }
 
-// .hero-title {
-//   font-weight: 900;
-//   font-size: 26px;
-//   line-height: 1.61;
-//   text-align: center;
-//   letter-spacing: 0.06em;
-//   text-transform: uppercase;
-//   color: var(--first-color);
-//   margin-bottom: 30px;
-// }
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: url("../images/bg-hero/bg-hero-mob@2x.jpg");
+  }
+}
 
-// @media screen and (min-width: 1200px) {
-//   .hero-title {
-//     font-size: 44px;
-//     line-height: 1.36;
-//   }
-// }
+.hero-title {
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.61;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--first-color);
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+  .hero-section {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+  }
+}
