--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,13 +1,17 @@
 .modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: var(--first-color);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 4px;
   padding: 40px;
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal-close-btn {
   position: absolute;
