--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,3 +1,11 @@
+.social-list {
+  display: flex;
+  justify-content: center;
+}
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+
 .social-list-link {
   display: flex;
   justify-content: center;
@@ -16,10 +24,6 @@
   }
 }
 
-.social-list {
-  display: flex;
-  justify-content: space-between;
-}
 .social-list-icon {
   width: 20px;
   height: 20px;
