--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -1,14 +1,23 @@
+.client-icon {
+  width: 106px;
+  height: 60px;
+  fill: #afb1b8;
+  transition: fill var(--timing-function) var(--duration);
+}
 .client-list {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  @media screen and (max-width: 1199px) {
+    margin-top: -30px;
+  }
 }
+
 .client-link {
   display: flex;
-  width: 170px;
-  height: 90px;
   align-items: center;
   justify-content: center;
+  height: 90px;
   border-radius: 4px;
   border: 1px solid #afb1b8;
   transition: border-color var(--timing-function) var(--duration);
@@ -19,11 +28,22 @@
       fill: var(--accent-color);
     }
   }
-}
-
-.client-icon {
-  width: 106px;
-  height: 60px;
-  fill: #afb1b8;
-  transition: fill var(--timing-function) var(--duration);
+  @media screen and (max-width: 767px) {
+    margin-top: 30px;
+    width: 210px;
+    flex-basis: calc((100% - 60px) / 2);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+    width: 226px;
+    flex-basis: calc((100% - 90px) / 3);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 0;
+    width: 170px;
+    flex-basis: calc((100% - 180px) / 6);
+    margin-left: 30px;
+  }
 }
