--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -3,6 +3,10 @@
   justify-content: center;
   margin-left: -8px;
   margin-bottom: 50px;
+  @media screen and (max-width: 767px) {
+    flex-wrap: wrap;
+    justify-content: start;
+  }
 }
 
 .portfolio-list {
@@ -12,7 +16,6 @@
   margin-top: -30px;
 }
 .portfolio-list-img {
-  flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
   transition: box-shadow var(--timing-function) var(--duration);
@@ -21,7 +24,20 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 60px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 90px) / 3);
+  }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .porfolio-list-content.tech {
+    padding-bottom: 56px;
+  }
+}
+
 .portfolio-img-wrapper {
   position: relative;
   overflow: hidden;
@@ -69,6 +85,9 @@
   &:focus {
     background: var(--accent-color);
     color: var(--first-color);
+  }
+  @media screen and (max-width: 767px) {
+    margin-bottom: 15px;
   }
 }
 
