--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -8,28 +8,6 @@
     color: var(--second-color);
     margin-bottom: 10px;
   }
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
-  }
-  &__list-item {
-    flex-basis: calc((100% - 120px) / 4);
-    margin-left: 30px;
-    margin-top: 30px;
-    background-color: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-  }
-  &__list-content {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    text-align: center;
-    padding-left: 32px;
-    padding-right: 32px;
-  }
   &__position {
     font-weight: 400;
     font-size: 16px;
@@ -38,4 +16,59 @@
     color: #757575;
     margin-bottom: 16px;
   }
+
+  &__photo {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 30px;
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
+  }
+
+  &__list {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -30px;
+      margin-top: -30px;
+    }
+  }
+
+  &__list-item {
+    background-color: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    margin-top: 30px;
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 60px) / 2);
+      margin-left: 30px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 120px) / 4);
+    }
+  }
+  &__list-content {
+    padding-top: 30px;
+    padding-bottom: 24px;
+    text-align: center;
+    padding-left: 32px;
+    padding-right: 32px;
+    @media screen and (min-width: 768px) {
+      padding-bottom: 30px;
+    }
+  }
+}
+
+.section-title.team {
+  text-align: center;
+  margin-bottom: 30px;
 }
