--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -99,6 +99,10 @@
       outline: var(--accent-color);
     }
   }
+  @media screen and (max-width: 1199px) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 }
 
 .modal-form-btn {
