--- a/sass/layout/_feature.scss
+++ b/sass/layout/_feature.scss
@@ -31,7 +31,9 @@
     color: #757575;
   }
   &__list-item {
-    margin-bottom: 30px;
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 30px;
+    }
   }
 }
 @media screen and (min-width: 768px) {
