--- a/css/main.css
+++ b/css/main.css
@@ -52,10 +52,17 @@ body {
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 479px) {
+  .container {
+    height: 100%;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
     margin: 0 auto;
+    height: 100%;
   }
 }
 
@@ -316,6 +323,13 @@ body {
   outline: var(--accent-color);
 }
 
+@media screen and (max-width: 1199px) {
+  .modal-form-checkbox-policy {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+}
+
 .modal-form-btn {
   align-self: center;
   font-weight: 700;
@@ -349,6 +363,10 @@ body {
     visibility: hidden;
     pointer-events: none;
     background-color: var(--first-color);
+  }
+  .mobile-menu__connect-list {
+    position: absolute;
+    bottom: 0;
   }
   .mobile-menu__container {
     position: relative;
@@ -394,7 +412,6 @@ body {
     color: var(--accent-color);
   }
   .mobile-menu__contact-list {
-    margin-top: 306px;
     margin-bottom: 34px;
   }
   .mobile-menu__contact-link-tel {
@@ -404,10 +421,6 @@ body {
     font-size: 34px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    color: var(--second-color);
-    transition: color var(--duration) var(--timing-function);
-  }
-  .mobile-menu__contact-link-tel:hover, .mobile-menu__contact-link-tel:focus {
     color: var(--accent-color);
   }
   .mobile-menu__contact-link-mail {
@@ -457,8 +470,13 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .header .header-container {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 .header .logo-link {
@@ -494,8 +512,8 @@ body {
     transition: color var(--duration) var(--timing-function);
   }
   .header .header__mobile-menu-icon {
-    width: 40px;
-    height: 40px;
+    width: 24px;
+    height: 16px;
     fill: #000000;
   }
   .header .header__mobile-menu-icon:hover, .header .header__mobile-menu-icon:focus {
@@ -713,8 +731,10 @@ body {
   color: #757575;
 }
 
-.feature__list-item {
-  margin-bottom: 30px;
+@media screen and (max-width: 1199px) {
+  .feature__list-item {
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -798,8 +818,8 @@ body {
     bottom: 0;
     left: 0;
     font-weight: 700;
-    font-size: 16px;
-    line-height: 1.17;
+    font-size: 14px;
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     padding-top: 27px;
@@ -840,7 +860,6 @@ body {
 .team__photo {
   max-width: 100%;
   height: auto;
-  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 480px) {
@@ -902,11 +921,6 @@ body {
   .team__list-content {
     padding-bottom: 30px;
   }
-}
-
-.section-title.team {
-  text-align: center;
-  margin-bottom: 30px;
 }
 
 .client-icon {
@@ -999,10 +1013,6 @@ footer {
     justify-content: space-around;
     text-align: center;
   }
-}
-
-.contact-footer {
-  margin-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1167,6 +1177,14 @@ footer {
 @media screen and (min-width: 1200px) {
   .footer-email-input {
     margin-left: 74px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-email-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
