--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,8 +5,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    @media screen and (max-width: 767px) {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
   }
   .logo-link {
     font-family: Raleway, sans-serif;
@@ -41,8 +43,8 @@
         transition: color var(--duration) var(--timing-function);
       }
       &__mobile-menu-icon {
-        width: 40px;
-        height: 40px;
+        width: 24px;
+        height: 16px;
         fill: #000000;
         &:hover,
         &:focus {
