--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -20,7 +20,6 @@
   &__photo {
     max-width: 100%;
     height: auto;
-    margin-bottom: 30px;
     @media screen and (min-width: 480px) {
       width: 450px;
     }
@@ -68,7 +67,9 @@
   }
 }
 
-.section-title.team {
-  text-align: center;
-  margin-bottom: 30px;
-}
+// .section-title.team {
+//   @media screen and (max-width: 1199px) {
+//     text-align: center;
+//     margin-bottom: 30px;
+//   }
+// }
